; ModuleID = '/home/carl/AnghaBench/linux/arch/ia64/oprofile/extr_perfmon.c_get_cpu_type.c'
source_filename = "/home/carl/AnghaBench/linux/arch/ia64/oprofile/extr_perfmon.c_get_cpu_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@local_cpu_data = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [13 x i8] c"ia64/itanium\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"ia64/itanium2\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"ia64/ia64\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @get_cpu_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_cpu_type() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @local_cpu_data, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  switch i32 %6, label %9 [
    i32 7, label %7
    i32 31, label %8
  ]

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %10

8:                                                ; preds = %0
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %10

9:                                                ; preds = %0
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %10

10:                                               ; preds = %9, %8, %7
  %11 = load i8*, i8** %1, align 8
  ret i8* %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
